--- a/.gitignore
+++ b/.gitignore
@@ -2,60 +2,6 @@
 # Created by https://www.gitignore.io/api/c,vim,ruby,macos
 # Edit at https://www.gitignore.io/?templates=c,vim,ruby,macos
 
-### C ###
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-
 ### macOS ###
 # General
 .DS_Store
@@ -161,3 +107,4 @@ tags
 # End of https://www.gitignore.io/api/c,vim,ruby,macos
 
 /test/
+Rakefile
